--- a/index.html
+++ b/index.html
@@ -8,10 +8,16 @@
 </head>
 <body>
 	<div class="main">
+		<header>
+			<div class="logo">
+				<img src="img/logo.jpg">
+			</div>
+			<div class="caption">Time to travel</div>
+		</header>
 
 
 
-		
+
 	</div>
 </body>
 </html>
