--- a/index.html
+++ b/index.html
@@ -14,7 +14,14 @@
 			</div>
 			<div class="caption">Time to travel</div>
 		</header>
-
+		<nav>
+			<ul>
+				<li><a href="#">Main page</a></li>
+				<li><a href="#">Blog</a></li>
+				<li><a href="#">Sign Up/Log In</a></li>
+				<li><a href="#">Travel tips</a></li>
+			</ul>
+		</nav>
 
 
 
