--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<div class="main">
 		<header>
 			<div class="logo">
-				<img src="img/logo.jpg">
+				<img src="img/logo1.png">
 			</div>
 			<div class="caption">Time to travel</div>
 		</header>
