Add block main_image

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
 				<li><a href="#">Travel tips</a></li>
 			</ul>
 		</nav>
-
+		<div class="main_image">
+			<img src="img/main_image.jpg">
+		</div>
 
 
 	</div>
