Add block main_text

--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
 		<div class="main_image">
 			<img src="img/main_image.jpg">
 		</div>
+		<div class="main_text">
+			<div class="text1">Advanture is for everyone!</div>
+			<div class="text2">Where do you want to start your next advanture?</div>
+		</div>
+		
 
 
 	</div>
