--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			<div class="text1">Advanture is for everyone!</div>
 			<div class="text2">Where do you want to start your next advanture?</div>
 		</div>
-		
+		<div class="block"></div>
 
 
 	</div>
