Add block greeting

--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
 			<div class="text2">Where do you want to start your next advanture?</div>
 		</div>
 		<div class="block"></div>
-
+		<div class="greeting">
+			Welcome adventurers! Take a step into our virtual world of research and discovery. 
+			Let's go on a journey of inspiration, where every destination is a fascinating story.
+		</div>
 
 	</div>
 </body>
