--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
 			Welcome adventurers! Take a step into our virtual world of research and discovery. 
 			Let's go on a journey of inspiration, where every destination is a fascinating story.
 		</div>
-
+	<footer>
+		<p>All images and informations were found on the Internet</p>			
+	</footer>
 	</div>
 </body>
 </html>
