--- a/index.html
+++ b/index.html
@@ -19,9 +19,17 @@
 				<li><a href="#">Main page</a></li>
 				<li><a href="#">Blog</a></li>
 				<li><a href="#">Travel tips</a></li>
-				<li><a href="#">Sign Up/Log In</a></li>
 			</ul>
+			<div class="block_buttons">
+				<button id="btn_sign">
+					<a href="sign_up_page.html">Sign Up</a>
+				</button>
+				<button id="btn_login">
+					<a href="login_page.html">Log In</a>
+				</button>
+		</div>
 		</nav>
+		
 		<div class="main_image">
 			<img src="img/main_image.jpg">
 		</div>
