--- a/login_page.html
+++ b/login_page.html
@@ -9,8 +9,12 @@
 </head>
 <body>
    <div class="main1">
-
-    
+    <header>
+        <div class="header_elements">
+            <div class="login_caption">Log In Page</div>
+            <div class="login_text">Return to <a href="index.html">Main page</a></div>
+        </div>  
+</header>
    </div>  
 </body>
 </html>
