--- a/login_page.html
+++ b/login_page.html
@@ -15,6 +15,9 @@
             <div class="login_text">Return to <a href="index.html">Main page</a></div>
         </div>  
 </header>
+<div class="container">
+    <div class="text3">Please enter email and password</div>
+</div>
    </div>  
 </body>
 </html>
