--- a/login_page.html
+++ b/login_page.html
@@ -17,6 +17,21 @@
 </header>
 <div class="container">
     <div class="text3">Please enter email and password</div>
+    <form id="form_login">
+        <div class="form_input">
+            <p><label for="user_email">Email</label></p>
+            <p><input type="text" placeholder="Enter your email" name="email" id="user_email" required></p>
+        </div>
+        <div class="form_input">
+            <p><label for="user_password">Password</label></p>
+            <p><input type="password" placeholder="Enter password" name="password" id="user_password" required></p>
+            
+        </div>
+        <div class="buttons">
+            <button id="btn_log_in">Submit</button>
+            <button id="btn_clear">Clear</button>
+        </div>
+    </form>
 </div>
    </div>  
 </body>
