--- a/login_page.html
+++ b/login_page.html
@@ -32,6 +32,11 @@
             <button id="btn_clear">Clear</button>
         </div>
     </form>
+    <div class="info">
+        <div class="text4">
+            <p>If you don't have account, <a href="sign_up_page.html">Sign Up</a></p>
+        </div>
+    </div>
 </div>
    </div>  
 </body>
