--- a/login_page.html
+++ b/login_page.html
@@ -37,6 +37,9 @@
             <p>If you don't have account, <a href="sign_up_page.html">Sign Up</a></p>
         </div>
     </div>
+    <div class="login_image">
+        <img src="img/1.png">
+    </div>
 </div>
    </div>  
 </body>
