--- a/sign_up_page.html
+++ b/sign_up_page.html
@@ -9,7 +9,12 @@
 </head>
 <body>
    <div class="main1">
-    
+    <header>
+        <div class="header_elements">
+            <div class="signup_caption">Sign Up Page</div>
+            <div class="signup_text">Return to <a href="index.html">Main page</a></div>
+        </div>  
+</header>
    </div>
 </body>
 </html>
