Add block container

--- a/sign_up_page.html
+++ b/sign_up_page.html
@@ -14,7 +14,12 @@
             <div class="signup_caption">Sign Up Page</div>
             <div class="signup_text">Return to <a href="index.html">Main page</a></div>
         </div>  
-</header>
+    </header>
+    <div class="container">
+        <div class="text3">Please enter email and password</div>
+
+
+    </div>
    </div>
 </body>
 </html>
