--- a/sign_up_page.html
+++ b/sign_up_page.html
@@ -32,6 +32,11 @@
                 <button id="btn_clear">Clear</button>
             </div>
         </form>
+        <div class="info">
+            <div class="text4">
+                <p>If you have account, <a href="login_page.html">Log In</a></p>
+            </div>
+        </div>
 
     </div>
    </div>
