Add block sign_image

--- a/sign_up_page.html
+++ b/sign_up_page.html
@@ -37,6 +37,9 @@
                 <p>If you have account, <a href="login_page.html">Log In</a></p>
             </div>
         </div>
+        <div class="sign_image">
+            <img src="img/2.png">
+        </div>
 
     </div>
    </div>
