--- a/travel_tips.html
+++ b/travel_tips.html
@@ -8,8 +8,13 @@
 </head>
 <body>
 	<div class="main">
+		<header>
+			<div class="logo2">
+				<img src="img/logo2.png">
+			</div>
+			<div class="caption">Travel tips</div>
+		</header>
 
-		
 	</div>
 </body>
 </html>
