Add block image_tips

--- a/travel_tips.html
+++ b/travel_tips.html
@@ -30,8 +30,10 @@
 		</div>
 		</nav>
 		<div class="block_tips">
+			<div class="image_tips">
+				<img src="img/4.jpg">
+			</div>
 
-			
 		</div>
 	</div>
 </body>
