--- a/travel_tips.html
+++ b/travel_tips.html
@@ -33,7 +33,23 @@
 			<div class="image_tips">
 				<img src="img/4.jpg">
 			</div>
+			<div class="tips">
+				<ol class="list">
+					<li>Have a travel plan.</li>
+					<li>Use a small backpack/suitcase.</li>
+					<li>Only bring what you need.</li>
+					<li>Only wear your most comfortable shoes.</li>
+					<li>Photocopy your driver’s license, passport, visa, 
+					vaccination status (if required), and other important documents.</li>
+					<li>Buy all your adapters, SIM cards, and currency at home.</li>
+					<li>Call your phone carrier to add international service to your plan if necessary.</li>
+					<li>Even if you are somewhat fluent in the language spoken in the country you're visiting,
+					 bring along a phrasebook for those times when you may get stumped. </li>
+					<li>Be careful and don’t take any risk.</li>
+					<li>Take an extra credit card with you.</li>
 
+				</ol>
+			</div>
 		</div>
 	</div>
 </body>
