--- a/travel_tips.html
+++ b/travel_tips.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<div class="main">
+	<div class="main1">
 		<header>
 			<div class="logo2">
 				<img src="img/logo2.png">
@@ -51,6 +51,7 @@
 				</ol>
 			</div>
 		</div>
+		
 	</div>
 </body>
 </html>
