--- a/travel_tips.html
+++ b/travel_tips.html
@@ -16,8 +16,8 @@
 		</header>
 		<nav>
 			<ul>
-				<li><a href="#">Main page</a></li>
-				<li><a href="#">Blog</a></li>
+				<li><a href="index.html">Main page</a></li>
+				<li><a href="travel_blog.html">Blog</a></li>
 				<li><a href="#">Travel tips</a></li>
 			</ul>
 			<div class="block_buttons">
