Change nav, add hyperlinks to pages

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 		<nav>
 			<ul>
 				<li><a href="#">Main page</a></li>
-				<li><a href="#">Blog</a></li>
-				<li><a href="#">Travel tips</a></li>
+				<li><a href="travel_blog.html">Blog</a></li>
+				<li><a href="travel_tips.html">Travel tips</a></li>
 			</ul>
 			<div class="block_buttons">
 				<button id="btn_sign">
