--- a/posts.html
+++ b/posts.html
@@ -7,6 +7,11 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	
+	<div class="posts_main">
+
+
+
+    
+    </div>
 </body>
 </html>
