--- a/posts.html
+++ b/posts.html
@@ -8,7 +8,13 @@
 </head>
 <body>
 	<div class="posts_main">
-
+        <header>
+            <div class="header_elements">
+                <div class="admin_greeting">Hello, admin</div>
+                <button id="btn_log_out">Log Out</button>
+            
+            </div>  
+        </header>
 
 
     
