--- a/posts.html
+++ b/posts.html
@@ -15,7 +15,11 @@
             
             </div>  
         </header>
+        <div class="container">
+            <div class="text3">My posts</div>
 
+
+        </div>
 
     
     </div>
