--- a/posts.html
+++ b/posts.html
@@ -17,7 +17,20 @@
         </header>
         <div class="container">
             <div class="text3">My posts</div>
-
+            <form id="post_form">
+                <div class="form_input">
+                    <label>Title</label><br>
+                    <input type="text" id="title" placeholder="Enter title"><br>
+                </div>
+              <div class="form_input">
+                <label>Post</label><br>
+                <textarea name="" id="post_content" cols="80" rows="10"></textarea>
+              </div>
+              <div class="post_buttons">
+                <button id="post_btn">Post</button>
+                <button id="update_btn">Update</button>
+            </div>
+            </form>
 
         </div>
 
