Add block my_content

--- a/posts.html
+++ b/posts.html
@@ -31,6 +31,10 @@
                 <button id="update_btn">Update</button>
             </div>
             </form>
+            <div class="my_content">
+
+                
+            </div>
 
         </div>
 
