--- a/posts.html
+++ b/posts.html
@@ -33,12 +33,13 @@
             </form>
             <div class="my_content">
 
-                
+
             </div>
 
         </div>
 
     
     </div>
+    <script src="src/script3.js" type="module"></script>  
 </body>
 </html>
