Replace update_btn with clear_btn

--- a/posts.html
+++ b/posts.html
@@ -28,7 +28,7 @@
               </div>
               <div class="post_buttons">
                 <button id="post_btn">Post</button>
-                <button id="update_btn">Update</button>
+                <button id="clear_btn">Clear</button>
             </div>
             </form>
             <div class="my_content">
