--- a/travel_blog.html
+++ b/travel_blog.html
@@ -8,7 +8,12 @@
 </head>
 <body>
 	<div class="blog_main">
-
+		<header>
+			<div class="logo">
+				<img src="img/logo1.png">
+			</div>
+			<div class="caption">Travel blog</div>
+		</header>
 
 
 
