--- a/travel_blog.html
+++ b/travel_blog.html
@@ -14,7 +14,21 @@
 			</div>
 			<div class="caption">Travel blog</div>
 		</header>
-
+		<nav>
+			<ul>
+				<li><a href="index.html">Main page</a></li>
+				<li><a href="#">Blog</a></li>
+				<li><a href="travel_tips.html">Travel tips</a></li>
+			</ul>
+			<div class="block_buttons">
+				<button id="btn_sign">
+					<a href="sign_up_page.html">Sign Up</a>
+				</button>
+				<button id="btn_login">
+					<a href="login_page.html">Log In</a>
+				</button>
+		</div>
+		</nav>
 
 
 
