--- a/travel_blog.html
+++ b/travel_blog.html
@@ -35,7 +35,7 @@
 
 
 
-				
+
 			</div>
 
 
@@ -46,5 +46,6 @@
 
 		
 	</div>
+	<script src="src/script4.js" type="module"></script>  
 </body>
 </html>
