--- a/posts.html
+++ b/posts.html
@@ -31,6 +31,7 @@
                 <button id="clear_btn">Clear</button>
             </div>
             </form>
+            </div>
             <div class="my_content">
 
 
