--- a/posts.html
+++ b/posts.html
@@ -42,5 +42,6 @@
     
     </div>
     <script src="src/script3.js" type="module"></script>  
+    <script src="src/script5.js" type="module"></script>  
 </body>
 </html>
