--- a/posts.html
+++ b/posts.html
@@ -43,5 +43,6 @@
     </div>
     <script src="src/script3.js" type="module"></script>  
     <script src="src/script5.js" type="module"></script>  
+    <script src="src/script6.js" type="module"></script>  
 </body>
 </html>
