Add block show_info

--- a/posts.html
+++ b/posts.html
@@ -32,6 +32,10 @@
             </div>
             </form>
             </div>
+            <div class="show_info">
+                <div class="caption1">My posts</div>
+                <button id="show_posts">Show</button>
+            </div>
             <div class="my_content">
 
 
