--- a/login_page.html
+++ b/login_page.html
@@ -20,11 +20,11 @@
     <form id="form_login">
         <div class="form_input">
             <p><label for="user_email">Email</label></p>
-            <p><input type="text" placeholder="Enter your email" name="email" id="user_email" required></p>
+            <p><input type="text" placeholder="Enter your email" name="email" id="user_email" required autocomplete="on"></p>
         </div>
         <div class="form_input">
             <p><label for="user_password">Password</label></p>
-            <p><input type="password" placeholder="Enter password" name="password" id="user_password" required></p>
+            <p><input type="password" placeholder="Enter password" name="password" id="user_password" required autocomplete="off"></p>
             
         </div>
         <div class="buttons">
